[gd_scene load_steps=3 format=3 uid="uid://damlvbxf1ikxo"]

[ext_resource type="PackedScene" uid="uid://x5ah0ffun06c" path="res://scripts/modules/vfx/particles/confetti/confetti_1.tscn" id="1_c17w3"]
[ext_resource type="Script" uid="uid://dmtl6i75pk8nr" path="res://scripts/components/confetti_pack/pack/confetti_pack.gd" id="1_x0ppv"]

[node name="ConfettiPack" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_x0ppv")

[node name="Top" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TopLeft" type="Control" parent="Top"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Confetti1" parent="Top/TopLeft" instance=ExtResource("1_c17w3")]
unique_name_in_owner = true
position = Vector2(-3.8146973e-06, 192)
scale = Vector2(0.99999994, 0.99999994)

[node name="Separator" type="Control" parent="Top"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TopRight" type="Control" parent="Top"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Confetti3" parent="Top/TopRight" instance=ExtResource("1_c17w3")]
unique_name_in_owner = true
position = Vector2(-6.1035156e-05, 192.00003)
rotation = -2.3561945
scale = Vector2(0.9999999, 0.9999999)

[node name="Separator" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Bottom" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="BottomLeft" type="Control" parent="Bottom"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Confetti2" parent="Bottom/BottomLeft" instance=ExtResource("1_c17w3")]
unique_name_in_owner = true
position = Vector2(-3.8146973e-06, -208.00006)
scale = Vector2(0.9999999, 0.9999999)

[node name="Separator" type="Control" parent="Bottom"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="BottomRight" type="Control" parent="Bottom"]
unique_name_in_owner = true
z_index = 2
layout_mode = 2
mouse_filter = 2

[node name="Confetti4" parent="Bottom/BottomRight" instance=ExtResource("1_c17w3")]
unique_name_in_owner = true
position = Vector2(-6.1035156e-05, -200)
rotation = -2.3561945
scale = Vector2(0.9999999, 0.9999999)
